# ai-voice-travel-planner

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  problemstatement  pyproject.toml  render.yaml
docs/: architecture.md  decision.md  deployment.md  implementation-plan.md
docs/sample-transcripts/: .gitkeep
scripts/: .gitkeep  ensure_chroma_index.py  ingest_rag.py
src/: __init__.py
src/agents/: __init__.py  base.py  registry.py
src/api/: config.py  deps.py  internal_export.py  main.py
src/evals/: README.md  __init__.py  edit_correctness.py  feasibility.py  grounding.py  run.py
src/export/: __init__.py  renderers.py  service.py
src/mcp_servers/: README.md  __init__.py
src/platform/: __init__.py
src/rag/: README.md  __init__.py  chunker.py  config.py  guidance.py  ingest.py  models.py  retriever.py  vector_store.py
src/shared/: __init__.py
src/ui/: .env.production.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
tests/: __init__.py  test_api.py  test_api_export.py  test_internal_export.py  test_messages.py
tests/agents/: test_edit.py  test_explain_intent_regression.py  test_export.py  test_knowledge.py  test_planning.py  test_recommend_intent.py  test_review.py  test_supervisor.py
tests/evals/: .gitkeep  __init__.py  test_edit_correctness.py  test_feasibility.py  test_grounding.py  test_run_cli.py
tests/export/: test_service.py
tests/integration/: test_followup_routing.py  (+3 more)
workflows/: .gitkeep  export_itinerary.json  export_itinerary_http.json
(+201 files in other folders)
